updated for mobile view

--- a/index.html
+++ b/index.html
@@ -40,32 +40,36 @@
                 <img src="images/Rectangle 2.png" alt="pizza image">
                 <h1>Craving for a cheesy pizza?</h1>
                 <!-- <img class="redline" src="images/Rectangle 3.png" alt=""> -->
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur architecto vitae laboriosam repellendus
-                     voluptatem voluptas dolor exercitationem possimus animi.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+                     architecto vitae laboriosam repellendus
+                </p>
             </div>
         </div>
         <!-- aboutus container -->
         <div class="aboutus">
-            <h1>About us</h1>
-            <div class="description">
-                <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non suscipit repudiandae fuga possimus, tempore tempora dolore accusantium modi quisquam maxime sed temporibus tenetur. Minima veritatis id dolor molestiae, suscipit voluptatum!</span>
-                    <span>Sint quaerat, a nemo aspernatur ab vero itaque iure quod, illo dolorem veritatis. Rem natus nobis eos in, facere illo iusto laboriosam obcaecati dolorem, ipsum dolorum aperiam non doloribus quam?</span></p>
+            <div><h1>ABOUT US</h1></div>
+            <!-- <div class="description"> -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Non suscipit repudiandae fuga possimus, tempore tempora dolore 
+                    accusantium modi quisquam maxime sed temporibus tenetur. Minima 
+                    veritatis id dolor molestiae, suscipit voluptatum!Sint quaerat.
+                </p>
             
-            <div class="desc-img">
-                <img src="images/dough-3082589_1920 1.png" alt="">
-            </div>
-        </div>
+            <!-- <span class="desc-img"> -->
+                <img  src="images/dough-3082589_1920 1.png" alt="">
+            <!-- </span> -->
+        <!-- </div> -->
         </div>
         <!-- menu container -->
         <div class="menu-container">
             <h1>MENU</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias id veritatis doloribus quaerat ratione quod iusto harum laboriosam asperiores, eum deserunt reprehenderit unde repellendus sit quibusdam cupiditate, sapiente necessitatibus earum!</p>
-            <div class="menu-items">
+            <!-- <div class="menu-items"> -->
                 <div class="card">
                 <img src="images/pizza2.png" alt="">
                 <div class="item-detail">
                   <h1>LOREM EPSUM</h1>
-                  <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere eligendi aliquam assumenda dolorum provident.</P>
+                  <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere eligendi aliquam.</P>
                 </div>
             </div>
             
@@ -73,38 +77,38 @@
                 <img src="images/pizza5.png" alt="">
                 <div class="item-detail">
                   <h1>LOREM EPSUM</h1>
-                  <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere eligendi aliquam assumenda dolorum provident.</P>
+                  <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere eligendi aliquam.</P>
                 </div>
             </div>
             <div class="card">
                 <img src="images/bread2.png" alt="">
                 <div class="item-detail">
                   <h1>LOREM EPSUM</h1>
-                  <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere eligendi aliquam assumenda dolorum provident.</P>
+                  <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere eligendi aliquam.</P>
                 </div>
             </div>
             <div class="card">
                 <img src="images/bread.png" alt="">
                 <div class="item-detail">
                   <h1>LOREM EPSUM</h1>
-                  <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere eligendi aliquam assumenda dolorum provident.</P>
+                  <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere eligendi aliquam.</P>
                 </div>
             </div>
             <div class="card">
                 <img src="images/Untitled.png" alt="">
                 <div class="item-detail">
                   <h1>LOREM EPSUM</h1>
-                  <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere eligendi aliquam assumenda dolorum provident.</P>
+                  <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere eligendi aliquam.</P>
                 </div>
             </div>
             <div class="card">
                 <img src="images/shake1.png" alt="">
                 <div class="item-detail">
                   <h1>LOREM EPSUM</h1>
-                  <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere eligendi aliquam assumenda dolorum provident.</P>
+                  <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere eligendi aliquam.</P>
                 </div>
             </div>
-            </div>
+            <!-- </div> -->
         </div>
         <!-- find us container -->
         <div class="findus">
